--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ button {
 <h2>🎬 Video</h2>
 
 <video id="mainVideo" controls>
-    <source src="sample.mp4" type="video/mp4">
+    <source src="video/VID20260116133216.mp4" type="video/mp4">
 </video>
 
 <br>
